fix spacing brah

--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,7 @@ i.override {
 
 .button-wrapper {
   text-align: center;
+  padding-bottom: 3rem;
 }
 
 button {
